--- a/RockPaperScissorsApp/src/app/routes/result-display/result-display.component.html
+++ b/RockPaperScissorsApp/src/app/routes/result-display/result-display.component.html
@@ -1,1 +1,11 @@
-<p>result-display works!</p>
+<div class="container">
+    <h1>You Won!</h1>
+    <div class="choices">
+        <div *ngIf="rpsService.selection === 'rock'" class="selection rock"></div>
+        <div *ngIf="rpsService.selection === 'paper'" class="selection paper"></div>
+        <div *ngIf="rpsService.selection === 'scissors'" class="selection scissors"></div>
+        <h3>vs</h3>
+        <div class="selection scissors"></div>
+    </div>
+    <button (click)="playAgain()">Again?</button>
+</div>
