--- a/RockPaperScissorsApp/src/app/app.component.html
+++ b/RockPaperScissorsApp/src/app/app.component.html
@@ -1,7 +1,15 @@
 <div class="page">
-  <h2>Rock, Paper, Scissors</h2>
+  <div class="header">
+    <h2>Rock, Paper, Scissors</h2>
+    <div class="login">
+      <h4>Username</h4>
+      <input type="text">
+    </div>
+  </div>
+
   <div class="routes">
     <router-outlet></router-outlet>
-    
   </div>
+
+  <a (click)="viewReports()" class="footer">View Report >></a>
 </div>
