--- a/RockPaperScissorsApp/src/app/components/score/score.component.html
+++ b/RockPaperScissorsApp/src/app/components/score/score.component.html
@@ -1,6 +1,6 @@
 <div class="results">
-    <h4>BobFrank</h4>
-    <h4>50%</h4>
-    <h4>300</h4>
+    <h4>{{score?.Username}}</h4>
+    <h4>{{score?.Ratio}}%</h4>
+    <h4>{{score?.Plays}}</h4>
 </div>
 <br>
