--- a/RockPaperScissorsApp/src/app/routes/report-display/report-display.component.html
+++ b/RockPaperScissorsApp/src/app/routes/report-display/report-display.component.html
@@ -7,6 +7,7 @@
             <h3>Win Ratio</h3>
             <h3>Turns Played</h3>
         </div>
-        <br>     
+        <br>
+        <app-score-list></app-score-list>     
     </div>
 </div>
