--- a/RockPaperScissorsApp/src/app/components/score-list/score-list.component.html
+++ b/RockPaperScissorsApp/src/app/components/score-list/score-list.component.html
@@ -1,1 +1,1 @@
-<app-score *ngFor="let score of scoreService.scores"></app-score>
+<app-score *ngFor="let score of scoreService.scores" [score]="score"></app-score>
