--- a/RockPaperScissorsApp/src/app/components/score/score.component.html
+++ b/RockPaperScissorsApp/src/app/components/score/score.component.html
@@ -1,6 +1,6 @@
 <div class="results">
     <h4>{{score.username}}</h4>
     <h4>{{score.winRatio}}%</h4>
-    <h4>{{score.turnsPlayed}}</h4>
+    <h4>{{score.gamesPlayed}}</h4>
 </div>
 <br>
