--- a/RockPaperScissorsApp/src/app/routes/result-display/result-display.component.html
+++ b/RockPaperScissorsApp/src/app/routes/result-display/result-display.component.html
@@ -1,5 +1,6 @@
-<div class="container">
-    <h1>{{rpsService.result}}!</h1>
+<p>DISPLAY RESULT</p>
+<!-- <div class="container">
+    <h1>{{gameService.result}}!</h1>
     <div class="choices">
         <div *ngIf="rpsService.selection === 'rock'" class="selection rock"></div>
         <div *ngIf="rpsService.selection === 'paper'" class="selection paper"></div>
@@ -10,4 +11,4 @@
         <div *ngIf="rpsService.cpuChoice === 'scissors'" class="selection scissors"></div>
     </div>
     <button (click)="playAgain()">Again?</button>
-</div>
+</div> -->
