--- a/RockPaperScissorsApp/src/app/routes/rps-picker/rps-picker.component.html
+++ b/RockPaperScissorsApp/src/app/routes/rps-picker/rps-picker.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <p>{{turn}} / {{noRounds}}</p>
     <div class="choices">
         <input type="button" class="selection rock" (click)="selectOption('rock')">
         <input type="button" class="selection paper" (click)="selectOption('paper')">
