--- a/RockPaperScissorsApp/src/app/app.component.html
+++ b/RockPaperScissorsApp/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h2>Rock, Paper, Scissors</h2>
     <div *ngIf="playing" class="login">
       <h4>Username:</h4>
-      <input *ngIf="username == null" type="text" (keyup.enter)="setUsername($event)">
+      <input [ngClass]="{'nullUsername': this.gameService.usernameWarning}" *ngIf="username == null" type="text" (keyup.enter)="setUsername($event)">
       <p>{{username}}</p>
     </div>
   </div>
