--- a/RockPaperScissorsApp/src/app/components/score/score.component.html
+++ b/RockPaperScissorsApp/src/app/components/score/score.component.html
@@ -2,5 +2,6 @@
     <h4>{{score.username}}</h4>
     <h4>{{score.winRatio}}%</h4>
     <h4>{{score.gamesPlayed}}</h4>
+    <h4>{{score.lastFive}}</h4>
 </div>
 <br>
