--- a/RockPaperScissorsApp/src/app/routes/report-display/report-display.component.html
+++ b/RockPaperScissorsApp/src/app/routes/report-display/report-display.component.html
@@ -5,7 +5,8 @@
         <div class="headers">
             <h3>Username</h3>
             <h3>Win Ratio</h3>
-            <h3>Turns Played</h3>
+            <h3>Games Played</h3>
+            <h3>Last Five</h3>
         </div>
         <br>
         <app-score-list></app-score-list>     
