--- a/RockPaperScissorsApp/src/app/routes/result-display/result-display.component.html
+++ b/RockPaperScissorsApp/src/app/routes/result-display/result-display.component.html
@@ -1,14 +1,5 @@
-<p>DISPLAY RESULT</p>
-<!-- <div class="container">
-    <h1>{{gameService.result}}!</h1>
-    <div class="choices">
-        <div *ngIf="rpsService.selection === 'rock'" class="selection rock"></div>
-        <div *ngIf="rpsService.selection === 'paper'" class="selection paper"></div>
-        <div *ngIf="rpsService.selection === 'scissors'" class="selection scissors"></div>
-        <h3>vs</h3>
-        <div *ngIf="rpsService.cpuChoice === 'rock'" class="selection rock"></div>
-        <div *ngIf="rpsService.cpuChoice === 'paper'" class="selection paper"></div>
-        <div *ngIf="rpsService.cpuChoice === 'scissors'" class="selection scissors"></div>
-    </div>
+<div class="container">
+    <h1>{{rpsService.gameResult}}!</h1>
+    <app-round-result-list></app-round-result-list>
     <button (click)="playAgain()">Again?</button>
-</div> -->
+</div>
