--- a/RockPaperScissorsApp/src/app/routes/report-display/report-display.component.css
+++ b/RockPaperScissorsApp/src/app/routes/report-display/report-display.component.css
@@ -8,7 +8,9 @@
     padding: 70px;
 }
 
-.headers {
-    display: flex;
-    justify-content: space-between;
+.board {
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    justify-items: center;
+    justify-content: space-evenly;
 }
