--- a/RockPaperScissorsApp/src/app/components/score/score.component.css
+++ b/RockPaperScissorsApp/src/app/components/score/score.component.css
@@ -9,8 +9,9 @@ h4 {
 }
 
 .results {
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(226, 233, 238);
-    align-content: center;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    justify-items: center;
+    justify-content: space-evenly;
+    background-color: rgba(224, 255, 255, 0.459);
 }
